fixed weird spacing bug

--- a/website/resources/css/menu.css
+++ b/website/resources/css/menu.css
@@ -29,6 +29,7 @@ a {
     float: left;
     width: 67%;
     z-index: 100;
+    /*height: 20vh;*/
     background-color: #fff;
 }
 
@@ -158,10 +159,34 @@ a {
     position: relative;
 }
 
-.menu-category-name{
+/*html {*/
+/*    scroll-padding-top: 40vh; !* height of sticky header *!*/
+/*}*/
+:target {
+    position: relative;
     display: block;
+    scroll-margin-top: 25vh; }
+
+.menu-category-namee{
+    display: inline-block;
     font-size: 20px;
+    /*top: -10vh;*/
+    /*margin-top: -10vh;*/
+    /*padding-top: 10vh;*/
+    /*max-height: 3vh;*/
 }
+
+.huh{
+    height: 10px;
+}
+
+
+/*:target::before {*/
+/*    content: "";*/
+/*    display: block;*/
+/*    height: 60px; !* fixed header height*!*/
+/*    margin: -60px 0 0; !* negative fixed header height *!*/
+/*}*/
 
 .menu-category-name-underlined{
     width: 20%;
@@ -171,8 +196,12 @@ a {
 
 .menu-categories{
     margin-left: 10px;
+    /*top: -10vw;*/
     margin-top: 50px;
     width: 95%;
+}
+
+.menu-categories > *{
 }
 
 .menu-categories:first-child{
@@ -255,9 +284,8 @@ a {
 }
 
 :target {
-    position: relative;
-    display: block;
-    padding-top: 200px;
+
+    /*padding-top: 200px;*/
 }
 
 /**************************************************************************/
